[project]
name = "personal_expense_system"
version = "0.1.0"
description = "Progetto per il corso di Fondamenti di Informatica, L-8 Ingegneria Informatica, Università Telematica San Raffaele, anno accademico 2025/2026."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
